kubernetes/kube-prod-d1/whisparr/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whisparr
  name: whisparr
  namespace: whisparr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: whisparr
  template:
    metadata:
      labels:
        app: whisparr
    spec:
      containers:
        - name: whisparr
          image: ghcr.io/hotio/whisparr:v3
          ports:
          - name: http
            containerPort: 6969
          volumeMounts:
          - name: whisparr-config
            mountPath: /config # this is probably wrong and needs to be checked, but I cant be bothered.
          - name: data
            mountPath: /data
          - name: data2
            mountPath: /data2
      volumes:
        - name: whisparr-config
          persistentVolumeClaim:
            claimName: whisparr-pvc
            readOnly: false
        - name: data
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/
        - name: data2
          nfs:
            server: 10.15.21.132
            path: /mnt/user/adult/
